<resources>
    <string name="app_name">Reminder</string>
    <string name="add_event">Add event</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="congratulations">Congratulations</string>
    <string name="event_month">EVENT OF THE MONTH</string>
    <string name="main_menu">Menu</string>
    <string name="create_event">CREATING AN EVENT</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="date_birth">Birthday</string>
    <string name="event">Event</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">Icon</string>
    <string name="select_action">SELECT AN ACTION</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="select_date">SELECT A DATE</string>


</resources>