<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#6A5ACD"
    android:padding="@dimen/padding_16dp">

    <ImageButton
        android:id="@+id/main_menu_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/main_menu"
        android:src="@drawable/ic_main_menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custom_app_bar_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_event_Btn_MA"
        app:layout_constraintStart_toEndOf="@+id/main_menu_image_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_event_Btn_MA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/add_event"
        android:src="@drawable/add_circle_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="NestedWeights" />

</androidx.constraintlayout.widget.ConstraintLayout>
